# substack2md

./: README.md  pyproject.toml
src/substack2md/: __init__.py  cli.py  fetch.py  parser.py
tests/: example-post.html  test_parser.py
