[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "substackscrape"
version = "0.1.0"
description = "Scrape public Substack posts to Markdown."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "requests>=2.31",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "black>=24.1.0"]

[project.scripts]
substack2md = "substack2md.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
